--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@aws-amplify/ui-react": "^6.5.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@types/socket.io-client": "^3.0.0",
     "aws-amplify": "^6.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "socket": "^0.14.26",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.0",
